# joysonrobot_comm

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
.aliyun/: .aliyun-flow.yaml
.github/workflows/: ci.yml
cmake/: common.cmake  doxygen.cmake  genidl.cmake  genproto.cmake  option.cmake  proto.cmake  python.cmake
docs/: Doxyfile.in
examples/: CMakeLists.txt
examples/certs/: ca.crt  ca.key  server.crt  server.csr  server.key
examples/cpp/: blackboard.cpp  client.cpp  ddsbag.cpp  double_sub.cpp  grpc_client.cpp  grpc_server.cpp  lr_client.cpp  pub.cpp  pub_dynamic.cpp  pub_json.cpp  pub_union.cpp  server.cpp  sub.cpp  sub_dynamic.cpp  sub_json.cpp  sub_union.cpp
examples/python/: pub.py  sub.py
idl/: Accel.idl  AccelStamped.idl  AccelWithCovariance.idl  AccelWithCovarianceStamped.idl  BatteryState.idl  BmsState.idl  Bool.idl  ButtonEvent.idl  Byte.idl  ByteMultiArray.idl  CameraInfo.idl  CameraStatus.idl  ChannelFloat32.idl  ColorRGBA.idl  CompressedImage.idl  DepthImage.idl  DiagnosticArray.idl  DiagnosticStatus.idl  DisparityImage.idl  Duration.idl  Empty.idl  Float32.idl  Float32MultiArray.idl  Float64.idl  Float64MultiArray.idl  FluidPressure.idl  Goals.idl  GridCells.idl  Header.idl  Illuminance.idl  Image.idl  Imu.idl  ImuState.idl  Inertia.idl  InertiaStamped.idl  Int16.idl  Int16MultiArray.idl  Int32.idl  Int32MultiArray.idl  Int64.idl  (+89 more)
include/common/dds/: dds_callback.hpp  dds_dynamic_factory.hpp  dds_entity.hpp  dds_factory_model.hpp  dds_topic_channel.hpp
include/idl/: BmsStateTypeObject.hpp  ButtonEvent.hpp  ButtonEventTypeObject.hpp  ImuStateTypeObject.hpp  LowCmd.hpp  LowCmdTypeObject.hpp  LowStateTypeObject.hpp  MotorCmd.hpp  MotorCmdTypeObject.hpp  MotorStateTypeObject.hpp  RpcReqMsg.hpp  RpcReqMsgTypeObject.hpp  RpcRespMsg.hpp  RpcRespMsgTypeObject.hpp  SenSorTest.hpp  Simple.hpp  SimpleTypeObject.hpp  TestTypeObject.hpp  union.hpp
include/jsrcomm/common/dds/: dds_callback.hpp  dds_dynamic_factory.hpp  dds_entity.hpp  dds_factory_model.hpp  dds_topic_channel.hpp
include/jsrcomm/common/grpc/: grpc_wrapper.hpp
include/jsrcomm/idl/: Accel.hpp  AccelStamped.hpp  AccelWithCovariance.hpp  AccelWithCovarianceStamped.hpp  Add.hpp  BatteryState.hpp  BmsState.hpp  Bool.hpp  Byte.hpp  ByteMultiArray.hpp  Calculator.hpp  CameraInfo.hpp  CameraStatus.hpp  ChannelFloat32.hpp  ColorRGBA.hpp  CompressedImage.hpp  DiagnosticArray.hpp  DiagnosticStatus.hpp  DisparityImage.hpp  Duration.hpp  Empty.hpp  Float32.hpp  Float32MultiArray.hpp  Float64.hpp  Float64MultiArray.hpp  FluidPressure.hpp  Goals.hpp  GridCells.hpp  Header.hpp  Illuminance.hpp  Image.hpp  ImageMarker.hpp  Imu.hpp  ImuState.hpp  Inertia.hpp  InertiaStamped.hpp  Int16.hpp  Int16MultiArray.hpp  Int32.hpp  Int32MultiArray.hpp  (+83 more)
include/jsrcomm/proto/: hello_world.grpc.pb.h  hello_world.pb.h
include/jsrcomm/robot/channel/: channel_blackboard.hpp  channel_factory.hpp  channel_publisher.hpp  channel_subscriber.hpp
include/jsrcomm/robot/common/: entities.hpp
include/jsrcomm/robot/rpc/: request.hpp  request_header.hpp  response.hpp  response_header.hpp  rpc_client.hpp  rpc_server.hpp
include/robot/channel/: channel_factory.hpp  channel_publisher.hpp  channel_subscriber.hpp
include/robot/common/: entities.hpp  fsm_state.hpp  robot_shared.hpp
include/robot/little_robot/: lr_api_const.hpp  lr_loco_api.hpp  lr_loco_client.hpp
include/robot/rpc/: error.hpp  request.hpp  request_header.hpp  response.hpp  response_header.hpp  rpc_client.hpp  rpc_server.hpp
proto/: hello_world.proto
python/: BmsState.pybind copy.ipp  ButtonEvent.pybind.ipp  ImuState.pybind.ipp  LowCmd.pybind.ipp  LowState.pybind.ipp  MotorCmd.pybind.ipp  MotorState.pybind.ipp  RpcReqMsg.pybind.ipp  RpcRespMsg.pybind.ipp  Test.pybind.ipp  binding.cpp
python/idl/: BmsState.pybind.ipp  ButtonEvent.pybind.ipp  ImuState.pybind.ipp  LowCmd.pybind.ipp  LowState.pybind.ipp  MotorCmd.pybind.ipp  MotorState.pybind.ipp  RpcReqMsg.pybind.ipp  RpcRespMsg.pybind.ipp  Simple.pybind.ipp  Test.pybind.ipp
scripts/: setup.sh
src/common/: dds_callback.cpp  dds_dynamic_factory.cpp  dds_factory_model.cpp
src/robot/: channel_factory.cpp  rpc_client.cpp  rpc_server.cpp
tests/: CMakeLists.txt  benchmark_tests.cpp  dds_dynamic_test.cpp  dds_test.cpp  fmt_test.cpp  unit_tests.cpp
